--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MachineVersion_Serial</string>
+    <string name="app_name">Android串口助手</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+	<string name="open_sucssess">打开串口成功</string>
+	<string name="close_sucssess">关闭串口成功</string>
+    <string name="receive_textview">接收窗口</string>
+    <string name="send_edittext">发送窗口</string>
+    <string name="open_serial">打开串口</string>
+	<string name="close_serial">关闭串口</string>
+    <string name="send_data">发送数据</string>
+	<string name="clear_data">清空数据</string>
+	<string name="data_to_send">请输入要发送的数据</string>
+    
 </resources>
